[package]
name = "cobblestone-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "cobblestone"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
dirs = "5.0"
md5 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
